--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
 <li>Argus PAP service: <strong>argus-pap</strong>
 <li>Argus PDP service: <strong>argus-pdp</strong>
 <li>Argus PEP Server service: <strong>argus-pep-server</strong>
-<li>Argus <pre>pepcli</pre> command (for testing purpose): <strong>argus-pepcli</strong>
+<li>Argus <tt>pepcli</tt> command (for testing purpose): <strong>argus-pepcli</strong>
 <li>YAIM configuration for Argus services: <strong>glite-yaim-argus-server</strong>
+<li>Local resource BDII: <strong>bdii</strong>
+</ul>
 </p>
 
 <h2>Documentation</h2>
